# hupe

./: .gitignore  README.md  dockerfile  log4rs.yaml
server/: Cargo.toml  Readme.md  config.yaml  connector.rs  log4rs.yaml
server/assets/css/: test.css
server/assets/js/: a.js  test.js
server/src/: broken_server.rs  connector.rs  main.rs  mod.rs  proxy.rs
server/src/config/: configuration.rs
server/src/connector/: file_matcher.rs  request_matcher.rs  request_modifier.rs
