[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
hyper-tls = { version="0.5.0", features = ["vendored" ]}
regex = "1"
http = "0.2.8"
chashmap = "2.2.2"
brotlic = "0.8.0"
flate2 = "1.0"
log = "0.4.17"
log4rs = "1.2.0"

